increase width of game input to prevent text overflow

--- a/src/public/game.css
+++ b/src/public/game.css
@@ -14,6 +14,7 @@ input {
     font-family: 'Space Mono', monospace;
     font-size: 1em;
     margin: 1em 0;
+    width: 100%;
 }
 
 input:focus,
